--- a/etl.ipynb
+++ b/etl.ipynb
@@ -2,33 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import datetime as dt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_44512\\970392396.py:2: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv('./dataset/movies_dataset.csv', delimiter=',')\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       " El dataset tiene 45466 filas. \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Area-Desa15\\AppData\\Local\\Temp\\ipykernel_25112\\970392396.py:2: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv('./dataset/movies_dataset.csv', delimiter=',')\n"
      ]
     }
    ],
@@ -43,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +51,7 @@
        "13"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +154,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +179,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +208,7 @@
        "17"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +250,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +306,7 @@
        "Name: release_date, Length: 45363, dtype: object"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +387,7 @@
        "      <td>5415.0</td>\n",
        "      <td>1995</td>\n",
        "      <td>10</td>\n",
-       "      <td>30</td>\n",
+       "      <td>1995-10-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -412,7 +411,7 @@
        "      <td>2413.0</td>\n",
        "      <td>1995</td>\n",
        "      <td>12</td>\n",
-       "      <td>15</td>\n",
+       "      <td>1995-12-15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -436,7 +435,7 @@
        "      <td>92.0</td>\n",
        "      <td>1995</td>\n",
        "      <td>12</td>\n",
-       "      <td>22</td>\n",
+       "      <td>1995-12-22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -460,7 +459,7 @@
        "      <td>34.0</td>\n",
        "      <td>1995</td>\n",
        "      <td>12</td>\n",
-       "      <td>22</td>\n",
+       "      <td>1995-12-22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -484,7 +483,7 @@
        "      <td>173.0</td>\n",
        "      <td>1995</td>\n",
        "      <td>2</td>\n",
-       "      <td>10</td>\n",
+       "      <td>1995-02-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -508,7 +507,7 @@
        "      <td>1886.0</td>\n",
        "      <td>1995</td>\n",
        "      <td>12</td>\n",
-       "      <td>15</td>\n",
+       "      <td>1995-12-15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -532,7 +531,7 @@
        "      <td>141.0</td>\n",
        "      <td>1995</td>\n",
        "      <td>12</td>\n",
-       "      <td>15</td>\n",
+       "      <td>1995-12-15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -556,7 +555,7 @@
        "      <td>45.0</td>\n",
        "      <td>1995</td>\n",
        "      <td>12</td>\n",
-       "      <td>22</td>\n",
+       "      <td>1995-12-22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -580,7 +579,7 @@
        "      <td>174.0</td>\n",
        "      <td>1995</td>\n",
        "      <td>12</td>\n",
-       "      <td>22</td>\n",
+       "      <td>1995-12-22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -604,7 +603,7 @@
        "      <td>1194.0</td>\n",
        "      <td>1995</td>\n",
        "      <td>11</td>\n",
-       "      <td>16</td>\n",
+       "      <td>1995-11-16</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -709,21 +708,21 @@
        "9                    GoldenEye          6.6      1194.0          1995   \n",
        "\n",
        "   release_month  release_day  \n",
-       "0             10           30  \n",
-       "1             12           15  \n",
-       "2             12           22  \n",
-       "3             12           22  \n",
-       "4              2           10  \n",
-       "5             12           15  \n",
-       "6             12           15  \n",
-       "7             12           22  \n",
-       "8             12           22  \n",
-       "9             11           16  \n",
+       "0             10   1995-10-30  \n",
+       "1             12   1995-12-15  \n",
+       "2             12   1995-12-22  \n",
+       "3             12   1995-12-22  \n",
+       "4              2   1995-02-10  \n",
+       "5             12   1995-12-15  \n",
+       "6             12   1995-12-15  \n",
+       "7             12   1995-12-22  \n",
+       "8             12   1995-12-22  \n",
+       "9             11   1995-11-16  \n",
        "\n",
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,13 +731,15 @@
     "# De haber fechas, deberán tener el formato AAAA-mm-dd, \n",
     "# además deberán crear la columna release_year donde extraerán el año de la fecha de estreno.\n",
     "# Se crea tambien las columnas release_month y release_day para ser utilizadas en los metodos de la api.\n",
-    "df['release_date'] = df['release_date'].astype(str)\n",
+    "import locale\n",
+    "locale.setlocale(locale.LC_TIME, \"es_ES\")\n",
     "\n",
-    "df['release_date']= pd.to_datetime(df['release_date']) \n",
+    "df['release_date']  = df['release_date'].astype(str)\n",
     "\n",
-    "df['release_year'] = df['release_date'].dt.year \n",
+    "df['release_date']  = pd.to_datetime(df['release_date']) \n",
+    "df['release_year']  = df['release_date'].dt.year \n",
     "df['release_month'] = df['release_date'].dt.month \n",
-    "df['release_day'] = df['release_date'].dt.day \n",
+    "df['release_day']   = df['release_date'].strftime(\"%A\")\n",
     "# verificar algunos registros\n",
     "df.head(10)"
    ]
@@ -823,7 +824,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
