--- a/etl.ipynb
+++ b/etl.ipynb
@@ -1131,6 +1131,408 @@
    "source": [
     "result.to_csv('../movies/dataset/dataset_final.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>budget</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>id</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>spoken_languages</th>\n",
+       "      <th>status</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>title</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>release_year</th>\n",
+       "      <th>release_month</th>\n",
+       "      <th>release_day_of_week</th>\n",
+       "      <th>retorno</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30000000.0</td>\n",
+       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
+       "      <td>862</td>\n",
+       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
+       "      <td>21.946943</td>\n",
+       "      <td>1995-10-30</td>\n",
+       "      <td>373554033.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>5415.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12.451801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>65000000.0</td>\n",
+       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 14, '...</td>\n",
+       "      <td>8844</td>\n",
+       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
+       "      <td>17.015539</td>\n",
+       "      <td>1995-12-15</td>\n",
+       "      <td>262797249.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}, {'iso...</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Roll the dice and unleash the excitement!</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2413.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.043035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[{'id': 10749, 'name': 'Romance'}, {'id': 35, ...</td>\n",
+       "      <td>15602</td>\n",
+       "      <td>A family wedding reignites the ancient feud be...</td>\n",
+       "      <td>11.7129</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Still Yelling. Still Fighting. Still Ready for...</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16000000.0</td>\n",
+       "      <td>[{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...</td>\n",
+       "      <td>31357</td>\n",
+       "      <td>Cheated on, mistreated and stepped on, the wom...</td>\n",
+       "      <td>3.859495</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>81452156.0</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Friends are the people who let you be yourself...</td>\n",
+       "      <td>Waiting to Exhale</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5.090760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[{'id': 35, 'name': 'Comedy'}]</td>\n",
+       "      <td>11862</td>\n",
+       "      <td>Just when George Banks has recovered from his ...</td>\n",
+       "      <td>8.387519</td>\n",
+       "      <td>1995-02-10</td>\n",
+       "      <td>76578911.0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Just When His World Is Back To Normal... He's ...</td>\n",
+       "      <td>Father of the Bride Part II</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45460</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[{'id': 18, 'name': 'Drama'}, {'id': 28, 'name...</td>\n",
+       "      <td>30840</td>\n",
+       "      <td>Yet another version of the classic epic, with ...</td>\n",
+       "      <td>5.683753</td>\n",
+       "      <td>1991-05-13</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Robin Hood</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45462</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[{'id': 18, 'name': 'Drama'}]</td>\n",
+       "      <td>111109</td>\n",
+       "      <td>An artist struggles to finish his work while a...</td>\n",
+       "      <td>0.178241</td>\n",
+       "      <td>2011-11-17</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>[{'iso_639_1': 'tl', 'name': ''}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Century of Birthing</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45463</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[{'id': 28, 'name': 'Action'}, {'id': 18, 'nam...</td>\n",
+       "      <td>67758</td>\n",
+       "      <td>When one of her hits goes wrong, a professiona...</td>\n",
+       "      <td>0.903007</td>\n",
+       "      <td>2003-08-01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>A deadly game of wits.</td>\n",
+       "      <td>Betrayal</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45464</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>227506</td>\n",
+       "      <td>In a small town live two brothers, one a minis...</td>\n",
+       "      <td>0.003503</td>\n",
+       "      <td>1917-10-21</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Satan Triumphant</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1917</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45465</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>461257</td>\n",
+       "      <td>50 years after decriminalisation of homosexual...</td>\n",
+       "      <td>0.163015</td>\n",
+       "      <td>2017-06-09</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Queerama</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>45363 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           budget                                             genres      id  \\\n",
+       "0      30000000.0  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...     862   \n",
+       "1      65000000.0  [{'id': 12, 'name': 'Adventure'}, {'id': 14, '...    8844   \n",
+       "2             0.0  [{'id': 10749, 'name': 'Romance'}, {'id': 35, ...   15602   \n",
+       "3      16000000.0  [{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...   31357   \n",
+       "4             0.0                     [{'id': 35, 'name': 'Comedy'}]   11862   \n",
+       "...           ...                                                ...     ...   \n",
+       "45460         0.0  [{'id': 18, 'name': 'Drama'}, {'id': 28, 'name...   30840   \n",
+       "45462         0.0                      [{'id': 18, 'name': 'Drama'}]  111109   \n",
+       "45463         0.0  [{'id': 28, 'name': 'Action'}, {'id': 18, 'nam...   67758   \n",
+       "45464         0.0                                                 []  227506   \n",
+       "45465         0.0                                                 []  461257   \n",
+       "\n",
+       "                                                overview popularity  \\\n",
+       "0      Led by Woody, Andy's toys live happily in his ...  21.946943   \n",
+       "1      When siblings Judy and Peter discover an encha...  17.015539   \n",
+       "2      A family wedding reignites the ancient feud be...    11.7129   \n",
+       "3      Cheated on, mistreated and stepped on, the wom...   3.859495   \n",
+       "4      Just when George Banks has recovered from his ...   8.387519   \n",
+       "...                                                  ...        ...   \n",
+       "45460  Yet another version of the classic epic, with ...   5.683753   \n",
+       "45462  An artist struggles to finish his work while a...   0.178241   \n",
+       "45463  When one of her hits goes wrong, a professiona...   0.903007   \n",
+       "45464  In a small town live two brothers, one a minis...   0.003503   \n",
+       "45465  50 years after decriminalisation of homosexual...   0.163015   \n",
+       "\n",
+       "      release_date      revenue  runtime  \\\n",
+       "0       1995-10-30  373554033.0     81.0   \n",
+       "1       1995-12-15  262797249.0    104.0   \n",
+       "2       1995-12-22          0.0    101.0   \n",
+       "3       1995-12-22   81452156.0    127.0   \n",
+       "4       1995-02-10   76578911.0    106.0   \n",
+       "...            ...          ...      ...   \n",
+       "45460   1991-05-13          0.0    104.0   \n",
+       "45462   2011-11-17          0.0    360.0   \n",
+       "45463   2003-08-01          0.0     90.0   \n",
+       "45464   1917-10-21          0.0     87.0   \n",
+       "45465   2017-06-09          0.0     75.0   \n",
+       "\n",
+       "                                        spoken_languages    status  \\\n",
+       "0               [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "1      [{'iso_639_1': 'en', 'name': 'English'}, {'iso...  Released   \n",
+       "2               [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "3               [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "4               [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "...                                                  ...       ...   \n",
+       "45460           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "45462                  [{'iso_639_1': 'tl', 'name': ''}]  Released   \n",
+       "45463           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "45464                                                 []  Released   \n",
+       "45465           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "\n",
+       "                                                 tagline  \\\n",
+       "0                                                    NaN   \n",
+       "1              Roll the dice and unleash the excitement!   \n",
+       "2      Still Yelling. Still Fighting. Still Ready for...   \n",
+       "3      Friends are the people who let you be yourself...   \n",
+       "4      Just When His World Is Back To Normal... He's ...   \n",
+       "...                                                  ...   \n",
+       "45460                                                NaN   \n",
+       "45462                                                NaN   \n",
+       "45463                             A deadly game of wits.   \n",
+       "45464                                                NaN   \n",
+       "45465                                                NaN   \n",
+       "\n",
+       "                             title  vote_average  vote_count  release_year  \\\n",
+       "0                        Toy Story           7.7      5415.0          1995   \n",
+       "1                          Jumanji           6.9      2413.0          1995   \n",
+       "2                 Grumpier Old Men           6.5        92.0          1995   \n",
+       "3                Waiting to Exhale           6.1        34.0          1995   \n",
+       "4      Father of the Bride Part II           5.7       173.0          1995   \n",
+       "...                            ...           ...         ...           ...   \n",
+       "45460                   Robin Hood           5.7        26.0          1991   \n",
+       "45462          Century of Birthing           9.0         3.0          2011   \n",
+       "45463                     Betrayal           3.8         6.0          2003   \n",
+       "45464             Satan Triumphant           0.0         0.0          1917   \n",
+       "45465                     Queerama           0.0         0.0          2017   \n",
+       "\n",
+       "       release_month  release_day_of_week    retorno  \n",
+       "0                 10                    0  12.451801  \n",
+       "1                 12                    4   4.043035  \n",
+       "2                 12                    4        NaN  \n",
+       "3                 12                    4   5.090760  \n",
+       "4                  2                    4        inf  \n",
+       "...              ...                  ...        ...  \n",
+       "45460              5                    0        NaN  \n",
+       "45462             11                    3        NaN  \n",
+       "45463              8                    4        NaN  \n",
+       "45464             10                    6        NaN  \n",
+       "45465              6                    4        NaN  \n",
+       "\n",
+       "[45363 rows x 18 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# se crea un dataset reducido a 25 mb para utilizarlo en el consumo de la api en render\n",
+    "# se elimina columnas que no usamos.\n",
+    "df = df.drop(columns = ['belongs_to_collection','production_companies','production_countries', 'original_language'])\n",
+    "\n",
+    "df\n",
+    "\n",
+    "# df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('../movies/dataset/dataset_reducido.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
