comentarios sobre el etl

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -4,26 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploración de los datos"
+    "## Exploración de datos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Indice\n",
-    "Descripción de los datos\n",
-    "Outliers\n",
-    "Distribución de los datos\n",
-    "visualización de datos\n",
-    "Conclusión\n"
+    "### Índice\n",
+    "1. [Descripción de los datos ](#id1)\n",
+    "2. [Outliers](#id2)\n",
+    "3. [Distribución de los datos](#id3)\n",
+    "4. [Visualización de los datos](#id4)\n",
+    "5. [Conclusión](#id5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Descripción de los datos\n",
+    "### 1. Descripción de los datos<a name=\"id1\"></a>\n",
     "Se describen la cantidad de registros y columnas con sus tipos de datos, ocupación en memoria y una estadística descriptiva de los mismos: cúal es el promedio, el desvío estandar, los cuartiles, todos medidas de tendencia central."
    ]
   },
@@ -1049,7 +1049,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Outliers\n",
+    "### 2. Ortliers<a name=\"id2\"></a>\n",
     "Detección de valores atípicos."
    ]
   }
@@ -1070,7 +1070,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
