--- a/ml.ipynb
+++ b/ml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Area-Desa15\\AppData\\Local\\Temp\\ipykernel_17372\\2947862856.py:2: DtypeWarning: Columns (5) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_14940\\2947862856.py:2: DtypeWarning: Columns (5) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df  = pd.read_csv('./dataset/movies_limpio.csv', delimiter=',')\n"
      ]
     },
@@ -56,74 +56,74 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>28408</th>\n",
-       "      <td>Lisa and Marine live a life of relative compan...</td>\n",
-       "      <td>1.877117</td>\n",
+       "      <th>23058</th>\n",
+       "      <td>Vassili is an aged prostitute with killer inst...</td>\n",
+       "      <td>1.073478</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>The Adopted</td>\n",
+       "      <td>Our Paradise</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33367</th>\n",
-       "      <td>A road trip from Karachi to Lahore where 5 fri...</td>\n",
-       "      <td>0.087996</td>\n",
+       "      <th>23036</th>\n",
+       "      <td>Satché is about to die. He decides to make his...</td>\n",
+       "      <td>0.998359</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Karachi se Lahore</td>\n",
+       "      <td>Today</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3153</th>\n",
-       "      <td>Attractive Manhattanite Allison Jones has it a...</td>\n",
-       "      <td>7.246119</td>\n",
-       "      <td>Living with a roommate can be murder.</td>\n",
-       "      <td>Single White Female</td>\n",
+       "      <th>8139</th>\n",
+       "      <td>Sylvia Stickles runs a convenience store with ...</td>\n",
+       "      <td>7.665431</td>\n",
+       "      <td>Threatening the very limits of common decency.</td>\n",
+       "      <td>A Dirty Shame</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28490</th>\n",
-       "      <td>A look into the judicial scandal that rocked t...</td>\n",
-       "      <td>1.802009</td>\n",
+       "      <th>4222</th>\n",
+       "      <td>A skilled young hockey prospect hoping to attr...</td>\n",
+       "      <td>4.204661</td>\n",
+       "      <td>The ice... The fire... The fight... To be the ...</td>\n",
+       "      <td>Youngblood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36604</th>\n",
+       "      <td>The film evokes a childhood in rural Lithuania...</td>\n",
+       "      <td>0.473698</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Kids for Cash</td>\n",
+       "      <td>The Issa Valley</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16227</th>\n",
-       "      <td>When a young Iranian's mother doesn't meet her...</td>\n",
-       "      <td>0.578872</td>\n",
+       "      <th>28972</th>\n",
+       "      <td>Detectives and best friends Andreas and Simon ...</td>\n",
+       "      <td>3.042462</td>\n",
+       "      <td>How far would you go?</td>\n",
+       "      <td>A Second Chance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40421</th>\n",
+       "      <td>Shy, a small-town butch with a nagging messiah...</td>\n",
+       "      <td>0.05154</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>The Mirror</td>\n",
+       "      <td>By Hook or by Crook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44217</th>\n",
-       "      <td>A bumbling Paris policeman is doggedly determi...</td>\n",
-       "      <td>4.620808</td>\n",
-       "      <td>What if Paris was yours?</td>\n",
-       "      <td>2 Alone in Paris</td>\n",
+       "      <th>5815</th>\n",
+       "      <td>Eliza and Debbie are two sisters who don't alw...</td>\n",
+       "      <td>5.341749</td>\n",
+       "      <td>You don't need extraordinary powers to do extr...</td>\n",
+       "      <td>The Wild Thornberrys Movie</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2073</th>\n",
-       "      <td>Unable, due to the seal of the confessional, t...</td>\n",
-       "      <td>10.424982</td>\n",
-       "      <td>Crushed lips don’t talk.</td>\n",
-       "      <td>I Confess</td>\n",
+       "      <th>5750</th>\n",
+       "      <td>Looking to escape her unhappy marriage, villai...</td>\n",
+       "      <td>4.187079</td>\n",
+       "      <td>She wants it all...</td>\n",
+       "      <td>The Last Seduction</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26876</th>\n",
-       "      <td>Jeong Yoon is a caring wife and mother and a s...</td>\n",
-       "      <td>2.329351</td>\n",
+       "      <th>25631</th>\n",
+       "      <td>Maurizio Merli stars as a hatchet-wielding bou...</td>\n",
+       "      <td>2.114454</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Way Back Home</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7096</th>\n",
-       "      <td>A small-town girl wins a date with a Hollywood...</td>\n",
-       "      <td>5.924226</td>\n",
-       "      <td>In every love story, there's only room for one...</td>\n",
-       "      <td>Win a Date with Tad Hamilton!</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2172</th>\n",
-       "      <td>Scientists in the Antarctic are confronted by ...</td>\n",
-       "      <td>16.83125</td>\n",
-       "      <td>Man is The Warmest Place to Hide.</td>\n",
-       "      <td>The Thing</td>\n",
+       "      <td>A Man Called Blade</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -131,43 +131,43 @@
       ],
       "text/plain": [
        "                                                overview popularity  \\\n",
-       "28408  Lisa and Marine live a life of relative compan...   1.877117   \n",
-       "33367  A road trip from Karachi to Lahore where 5 fri...   0.087996   \n",
-       "3153   Attractive Manhattanite Allison Jones has it a...   7.246119   \n",
-       "28490  A look into the judicial scandal that rocked t...   1.802009   \n",
-       "16227  When a young Iranian's mother doesn't meet her...   0.578872   \n",
-       "44217  A bumbling Paris policeman is doggedly determi...   4.620808   \n",
-       "2073   Unable, due to the seal of the confessional, t...  10.424982   \n",
-       "26876  Jeong Yoon is a caring wife and mother and a s...   2.329351   \n",
-       "7096   A small-town girl wins a date with a Hollywood...   5.924226   \n",
-       "2172   Scientists in the Antarctic are confronted by ...   16.83125   \n",
+       "23058  Vassili is an aged prostitute with killer inst...   1.073478   \n",
+       "23036  Satché is about to die. He decides to make his...   0.998359   \n",
+       "8139   Sylvia Stickles runs a convenience store with ...   7.665431   \n",
+       "4222   A skilled young hockey prospect hoping to attr...   4.204661   \n",
+       "36604  The film evokes a childhood in rural Lithuania...   0.473698   \n",
+       "28972  Detectives and best friends Andreas and Simon ...   3.042462   \n",
+       "40421  Shy, a small-town butch with a nagging messiah...    0.05154   \n",
+       "5815   Eliza and Debbie are two sisters who don't alw...   5.341749   \n",
+       "5750   Looking to escape her unhappy marriage, villai...   4.187079   \n",
+       "25631  Maurizio Merli stars as a hatchet-wielding bou...   2.114454   \n",
        "\n",
        "                                                 tagline  \\\n",
-       "28408                                                NaN   \n",
-       "33367                                                NaN   \n",
-       "3153               Living with a roommate can be murder.   \n",
-       "28490                                                NaN   \n",
-       "16227                                                NaN   \n",
-       "44217                           What if Paris was yours?   \n",
-       "2073                            Crushed lips don’t talk.   \n",
-       "26876                                                NaN   \n",
-       "7096   In every love story, there's only room for one...   \n",
-       "2172                   Man is The Warmest Place to Hide.   \n",
+       "23058                                                NaN   \n",
+       "23036                                                NaN   \n",
+       "8139      Threatening the very limits of common decency.   \n",
+       "4222   The ice... The fire... The fight... To be the ...   \n",
+       "36604                                                NaN   \n",
+       "28972                              How far would you go?   \n",
+       "40421                                                NaN   \n",
+       "5815   You don't need extraordinary powers to do extr...   \n",
+       "5750                                 She wants it all...   \n",
+       "25631                                                NaN   \n",
        "\n",
-       "                               title  \n",
-       "28408                    The Adopted  \n",
-       "33367              Karachi se Lahore  \n",
-       "3153             Single White Female  \n",
-       "28490                  Kids for Cash  \n",
-       "16227                     The Mirror  \n",
-       "44217               2 Alone in Paris  \n",
-       "2073                       I Confess  \n",
-       "26876                  Way Back Home  \n",
-       "7096   Win a Date with Tad Hamilton!  \n",
-       "2172                       The Thing  "
+       "                            title  \n",
+       "23058                Our Paradise  \n",
+       "23036                       Today  \n",
+       "8139                A Dirty Shame  \n",
+       "4222                   Youngblood  \n",
+       "36604             The Issa Valley  \n",
+       "28972             A Second Chance  \n",
+       "40421         By Hook or by Crook  \n",
+       "5815   The Wild Thornberrys Movie  \n",
+       "5750           The Last Seduction  \n",
+       "25631          A Man Called Blade  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "4  21898  Toy Story of Terror!                 0.817672"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,9 +442,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0             Toy Story 2\n",
+      "1             Toy Story 3\n",
+      "2                 The Toy\n",
+      "3                 The Toy\n",
+      "4    Toy Story of Terror!\n",
+      "Name: recommendation, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "def obtenerListaPeliculas(pelicula):\n",
     "    recommendations = get_recommendations(df, \n",
@@ -452,7 +465,8 @@
     "                                      pelicula, \n",
     "                                      cosine_similarities)\n",
     "    return recommendations['recommendation']\n",
-    "    "
+    "    \n",
+    "print(obtenerListaPeliculas('Toy Story'))"
    ]
   }
  ],
@@ -472,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
